IoT Hub ConnectionString removed from APp.config

--- a/LockSimulatorIoT.Device/LockSimulatorIoT/App.config
+++ b/LockSimulatorIoT.Device/LockSimulatorIoT/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="LockConnectionString" value="HostName=IoTHubPracticeSet.azure-devices.net;DeviceId=frontdoorlock;SharedAccessKey=30dflFOWKB9TNMtrBuCjSNlVCP7+CYlD/Tox+jxaw6w=" />
+    <add key="LockConnectionString" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
